# plugsmith

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish.yml
docs/: configuration.md  installation.md  quickstart.md  radio-operations.md  roaming-zones.md  troubleshooting.md
src/plugsmith/: __init__.py  __main__.py  app.py  config.py  hw_submit.py  runner.py  tool_discovery.py
src/plugsmith/builder/: README.md  __init__.py  api.py  build_config.py  codeplug.py  export.py  filters.py  models.py  radio_settings_meta.py  roaming.py  talkgroups.py  zones.py
src/plugsmith/screens/: __init__.py  build_screen.py  config_editor.py  generic_hw_settings.py  hw_submit_modal.py  main_screen.py  modals.py  radio_screen.py  roaming_screen.py  roaming_zone_modal.py  setup_wizard.py
src/plugsmith/styles/: plugsmith.tcss
src/plugsmith/widgets/: __init__.py  field_editors.py  output_log.py  status_bar.py
tests/: conftest.py  test_api.py  test_codeplug_hw.py  test_config.py  test_dstar_channels.py  test_export.py  test_filters.py  test_fusion_channels.py  test_generic_hw_settings.py  test_hw_submit.py  test_integration.py  test_mode_config.py  test_radio_profiles.py  test_radio_settings_meta.py  test_roaming.py  test_runner.py  test_scale_config.py  test_state_selection.py  test_talkgroups.py  test_tool_discovery.py  test_zones_channel_builders.py  test_zones_overflow.py
